# onnxruntime

docs/api/c/: functions_func_g.html  functions_g.html  navtreedata.js  navtreeindex0.js  navtreeindex1.js  navtreeindex2.js  navtreeindex3.js  navtreeindex4.js  onnxruntime__cxx__api_8h_source.html  struct_ort_api.html
docs/api/c/search/: all_7.js  functions_6.js
docs/api/python/: searchindex.js  tutorial.html
docs/api/python/auto_examples/: plot_backend.html  plot_convert_pipeline_vectorizer.html  plot_load_and_predict.html  plot_pipeline.html  plot_profiling.html  plot_train_convert_predict.html  sg_execution_times.html
docs/api/python/sources/auto_examples/: plot_backend.rst.txt  plot_convert_pipeline_vectorizer.rst.txt  plot_load_and_predict.rst.txt  plot_pipeline.rst.txt  plot_profiling.rst.txt  plot_train_convert_predict.rst.txt  (+1 more)
onnxruntime/core/graph/contrib_ops/: internal_nhwc_onnx_opset.cc  quantization_defs.cc
onnxruntime/core/providers/xnnpack/: xnnpack_execution_provider.cc
onnxruntime/python/tools/kernel_explorer/: CMakeLists.txt  device_array.h  hip_utils.cpp  hip_utils.h  kernel_explorer.cc  kernel_explorer.cpp  operator.h  timer.cpp
onnxruntime/python/tools/kernel_explorer/kernels/: fast_gelu.cc  fast_gelu_kernel.h  fast_gelu_test.py  gemm.cpp  gemm.h  gemm_test.py  vector_add.cc  vector_add.cpp  vector_add_kernel.h  vector_add_tunable_op.h
onnxruntime/python/tools/quantization/: qdq_quantizer.py
onnxruntime/test/perftest/: command_args_parser.cc  ort_test_session.cc
onnxruntime/test/python/quantization/: test_op_gemm.py
(+12 files in other folders)
